# prompt-library

./: .aider.conf.yml  .aiderignore  .cursorignore  .cursorrules  .cz-config.js  .dockerignore  .env-sample  .gitignore  .opencommitignore  .pre-commit-config.yaml  .relint.yml  Justfile  Makefile  PROMPTS.md  README.md  REFERENCES.md  TODO.md  copier.md  cursorrules.xml  hello.py  logic-to-merge.md  marimo_fix.py  marimo_prompt_analysis.py  marimo_prompt_library.py  mariomo_multi_language_model_ranker.py  mariomo_multi_llm_prompting.py  mariomo_prompt_library.py  multi_language_model_ranker.py  multi_llm_prompting.py  project_layout.md  prompt_library.py  pyproject.toml
ai_docs/: example_prompt_improver.md  indydevdan_transcript_marimo.md  marimo_cheatsheet.md  marimo_compressed.md  xml_structure_prompts.md
ai_docs/hass_example_pylint_plugin/: hass_pylint_plugin_output.xml  how_to_write_a_pylint_checker.md  prompt_library_pylint_plugin_output.xml
aider_configs/: aider_rules
datasets/helldivers2/: Justfile  download_urls.sh  parse_sitemap.py  sitemap-helldivers_en-NS_0-0.xml  urls_to_download.txt
hack/: pyproject2.toml  taplo.toml
prompt_copier_template/: copier.yml
scripts/: .format.py  files-to-prompt-wrapper.py  open-browser.py
src/: __init__.py
templates/: metadata_template.json  prompt_template.xml  readme_template.md
tests/: __init__.py  conftest.py  ruff.toml  test_async_typer.py  test_chain.py  test_cli.py  test_llm_module.py  test_marimo_fix.py  test_prompt_library_module.py  test_shell.py  test_types.py  test_typings.py  test_utils.py
(+690 files in other folders)
