[project]
name = "prompt-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "copier>=9.4.1",
    "llm-cmd>=0.2a0",
    "llm>=0.19.1",
    "llm-clip>=0.1",
    "llm-sentence-transformers>=0.2",
    "llm-replicate>=0.3.1",
    "llm-perplexity>=2024.11.0",
    "llm-claude-3>=0.10",
    "llm-python>=0.1",
    "loguru>=0.7.3",
    "better-exceptions>=0.3.3",
    "promptim>=0.0.7",
    "marimo>=0.9.32",
    "rich>=13.9.4",
    "datachain>=0.7.9",
    "transformers>=4.47.0",
    "imutils>=0.5.4",
    "imageio>=2.36.1",
    "logging-tree>=1.10",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "bpython>=0.24",
]
